<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android book app</string>
    <string name="calculate_app">Calculator</string>
    <string name="enter_amount">Enter amount</string>
    <string name="tip">Tip</string>
    <string name="percent">%d%%</string>
    <string name="result">$d</string>
    <string name="total">Total</string>
    <string name="chip_result">%.2f $</string>
    <string name="total_result">%.2f $</string>
    <string name="flag_quiz">Flag Quiz</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Районы</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">One region must be selected. Setting North America as the default region</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">North_America</string>
    <string name="setting">setting</string>
    <string name="draftsman">Draftsman</string>
    <string name="color">Color</string>
    <string name="thickness_of_brush">Thickness of brush</string>
    <string name="save">Save</string>
    <string name="remove">Удалить</string>
    <string name="print">Распечатать</string>
    <string name="alpha">Альфа</string>
    <string name="red">Красный</string>
    <string name="green">Зеленый</string>
    <string name="blue">Синий</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="chose_color">Выбрать цвет</string>
    <string name="line_thickness">Толщина линии</string>
    <string name="choose_width">Выбрать толщину</string>
    <string name="fragment_one">фрагмент 1</string>
    <string name="fragment_three">фрагмент 3</string>
    <string name="fragment_two">фрагмент 2</string>
</resources>
