<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/cicerone_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_two"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_two"
        app:layout_constraintEnd_toStartOf="@+id/fragment_one"
        app:layout_constraintStart_toEndOf="@+id/fragment_two"
        app:layout_constraintTop_toTopOf="@+id/fragment_two" />

    <Button
        android:id="@+id/fragment_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_three"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_two" />




</android.support.constraint.ConstraintLayout>