<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculate.CalculateActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorLightPrimary"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightPrimary"
            android:digits="0123456789"
            android:inputType="number"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="16dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_view_output_result"
        style="@style/text_result_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/enter_amount"
        android:gravity="start|center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/percent_text_view"
        style="@style/text_title_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <SeekBar
        android:id="@+id/percent_seek_bar"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:max="30"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="@+id/percent_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percent_text_view"
        app:layout_constraintTop_toTopOf="@+id/percent_text_view" />

    <TextView
        android:id="@+id/text_title_tip"
        style="@style/text_title_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent_text_view" />

    <TextView
        android:id="@+id/text_view_result_tip"
        style="@style/text_result_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/result"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_title_tip"
        app:layout_constraintTop_toTopOf="@+id/text_title_tip" />

    <TextView
        android:id="@+id/text_title_total"
        style="@style/text_title_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_tip" />

    <TextView
        android:id="@+id/text_view_result_total"
        style="@style/text_result_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/result"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_title_total"
        app:layout_constraintTop_toTopOf="@+id/text_title_total" />


</android.support.constraint.ConstraintLayout>